# release-gate

./: .gitignore  .pre-commit-hooks.yaml  .vercelignore  ACTION_CHECKLIST.md  COMPLETE.md  COMPLETE_FILE_LIST.md  COMPREHENSIVE_DEMO.py  DEPLOYMENT.md  FINAL_COMPLETE_SUMMARY.md  FINAL_SUMMARY.md  GOVERNANCE_VISION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PM_READY_CHECKLIST.md  PM_RESPONSE.md  README.md  ROADMAP.md  SECURITY.md  SLSA.md  TESTING.md  VERIFICATION_REPORT.md  WARN_TEST_SCENARIOS.md  action.yml  cli.py  governance-key.pem  governance-key.pub  governance-simple.yaml  governance-working.yaml  pyproject.toml  readiness_report.json  release-gate.yaml  requirements.txt  server.json  setup.py  test_cli.py  test_v05.bat  test_v05_complete.bat  vercel.json
.github/workflows/: publish.yml  release-gate-pr.yml  release-gate.yml  tests.yml
api/: _main.py  db.py  github_app.py  index.py  main.py
benchmark/: README.md  RESULTS.md  cases.yaml  run.py
ci-templates/: README.md  azure-pipelines.yml  circleci.yml  gitlab-ci.yml
ci-templates/jenkins/: Jenkinsfile
crypto/: governance_signer.py
docs/: ARCHITECTURE.md  AUDIT_BADGE.md  CHANGELOG.md  GITHUB_APP_SETUP.md  OUTREACH_DRAFTS.md  OUTREACH_TARGETS.md  PHASE_2_COMPLETE.md  PHASE_2_DELIVERABLES.txt  PHASE_2_DEPLOYMENT_GUIDE.md  PHASE_2_RELEASE_NOTES.md  PHASE_2_SUMMARY.md  POLICY_ENGINE_README.md  POSITIONING_COMPLETE.md  RULES.md  STATE_OF_AGENT_CODE_SAFETY.md  SUPPORT.md
docs/specs/: agent-safety-checks.md
examples/: README.md  agent_evals.yaml  agent_example.py  evals.yaml  example-phase2-audio.yaml  example-phase2-llm.yaml  example-phase2-video.yaml  governance-model-profile.yaml  governance-safe-pass.yaml  governance-unsafe-fail.yaml  governance_complete.yaml  http_agent_server.py  http_demo_evals.yaml  llm_agent.py  loop_agents.py  loop_demo_scenarios.yaml  loop_scenarios.yaml  pricing.lock.json
examples/demo-code-risk/: README.md  build_demo.sh
examples/demo-code-risk/fixed/: agent.py
examples/demo-code-risk/vulnerable/: agent.py
examples/keys/: README.md
examples/traces/: safe-trace.json  unsafe-trace.json
public/: demo.html  index.html  perfect-code.html  research.html
release_gate/: __init__.py  agent_analysis.py  agent_score.py  audit.py  cli.py  demo.py  evidence_pack.py  frameworks.py  impact_simulator.py  init.py  integrations.py  llm_verify.py  lockfile.py  loop_sim.py  loop_verifier.py  mcp_server.py  readiness_scorer.py  regression_gate.py  report.py  rules.py  trace_validator.py  verify.py  web_cta.py
release_gate/agent/: __init__.py  client.py  runtime.py
release_gate/checks/: __init__.py  action_budget.py  fallback_declared.py  identity_boundary.py  input_contract.py
release_gate/crypto/: __init__.py  governance_verifier.py
release_gate/evals/: __init__.py  runner.py
release_gate/pricing/: __init__.py  budget_simulator.py  lock.py  resolver.py
release_gate_api/: _app.py  _frontend.py  auth.py  db.py  email_util.py  github_app.py  live_scan.py  main.py  net_guard.py  report_pdf.py
schema/: README.md  evals.schema.json  governance.schema.json
scripts/: bump_version.py  check_version_sync.py  comprehensive_demo.py  embed_frontend.py  gen_rules_doc.py  test_v05.ps1
tests/: conftest.py  test_agent_analysis.py  test_agent_client.py  test_agent_score.py  test_agent_score_demo_api.py  test_audit.py  test_audit_input.py  test_benchmark.py  test_budget_simulator.py  test_checks.py  test_crypto.py  test_frameworks.py  test_impact_simulator.py  test_live_scan.py  test_llm_verify.py  test_lockfile.py  test_loop_demo.py  test_loop_sim.py  test_loop_sim_api.py  test_loop_sim_demo_api.py  test_loop_verifier.py  test_mcp_server.py  test_model_profile_integration.py  test_net_guard.py  test_pricing_lock.py  test_pricing_resolver.py  test_questions_api.py  test_release_gate.py  test_report_pdf.py  test_review_fixes.py  test_rules.py  test_runtime_profile.py  test_security_hardening.py  test_split_scores.py  test_v06_features.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
