[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "release-gate"
version = "0.7.0"
description = "AI agent release decision engine - readiness scoring, regression gate, eval runner, trace validation, and evidence packs for CI/CD."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vamsi Sudhakaran", email = "vamsi.sudhakaran@gmail.com"}
]
keywords = ["ai", "governance", "cost-control", "safety", "deployment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
# Vercel's Python runtime resolves dependencies from pyproject.toml, so the
# FastAPI backend's deps must live here (not only in requirements.txt) or the
# serverless function crashes on import with FUNCTION_INVOCATION_FAILED.
dependencies = [
    # Core CLI
    "pyyaml>=6.0",
    "jsonschema>=4.0",
	"cryptography>=41.0.0",
    # Web / SaaS backend
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "PyJWT>=2.8.0",
]

# Supply-chain note: for reproducible production installs, pin dependencies with
# hashes by running:  pip install release-gate --require-hashes -r requirements.txt
# Generate a pinned requirements file with:  pip-compile --generate-hashes pyproject.toml

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=4.0",
]

[project.scripts]
release-gate = "release_gate.cli:unified_main"

[project.urls]
Homepage = "https://github.com/VamsiSudhakaran1/release-gate"
Documentation = "https://github.com/VamsiSudhakaran1/release-gate#readme"
Repository = "https://github.com/VamsiSudhakaran1/release-gate"
Issues = "https://github.com/VamsiSudhakaran1/release-gate/issues"

[tool.setuptools]
packages = ["release_gate", "release_gate.checks", "release_gate.pricing", "release_gate.crypto", "release_gate.agent", "release_gate.evals"]

[tool.setuptools.package-data]
release_gate = ["*.yaml", "*.json"]

[tool.vercel]
entrypoint = "release_gate_api.main:app"

