[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "release-gate"
version = "0.8.4"
description = "AI agent release decision engine - readiness scoring, regression gate, eval runner, trace validation, and evidence packs for CI/CD."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vamsi Sudhakaran", email = "vamsi.sudhakaran@gmail.com"}
]
keywords = ["ai", "governance", "cost-control", "safety", "deployment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
# Vercel's Python runtime resolves dependencies from pyproject.toml (it builds
# and installs this project), NOT from requirements.txt — so the FastAPI backend
# deps MUST live here or the serverless function crashes on import with
# ModuleNotFoundError: No module named 'fastapi'. (Moving them to an optional
# [api] extra broke production: Vercel never installs extras.)
#
# Trade-off: `pip install release-gate` also pulls the web stack. A truly lean
# CLI install would require a separate distribution or Vercel config to install
# requirements.txt explicitly.
dependencies = [
    # Core CLI
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "cryptography>=41.0.0",  # evidence-pack signing/verification
    # Web / SaaS backend (release-gate.com API) — required by Vercel at import
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "PyJWT>=2.8.0",
    "fpdf2>=2.7.0",  # pure-Python PDF report generation (paid detailed report)
]

# Supply-chain note: for reproducible production installs, pin dependencies with
# hashes by running:  pip install release-gate --require-hashes -r requirements.txt
# Generate a pinned requirements file with:  pip-compile --generate-hashes pyproject.toml

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=4.0",
]
# Optional: expose the auditor as a local MCP server for MCP-capable agents.
# Kept out of the base install so the CLI stays lean.
mcp = [
    "mcp>=1.2",
]

[project.scripts]
release-gate = "release_gate.cli:unified_main"
release-gate-mcp = "release_gate.mcp_server:main"

[project.urls]
Homepage = "https://github.com/VamsiSudhakaran1/release-gate"
Documentation = "https://github.com/VamsiSudhakaran1/release-gate#readme"
Repository = "https://github.com/VamsiSudhakaran1/release-gate"
Issues = "https://github.com/VamsiSudhakaran1/release-gate/issues"

[tool.setuptools]
packages = ["release_gate", "release_gate.checks", "release_gate.pricing", "release_gate.crypto", "release_gate.agent", "release_gate.evals"]

[tool.setuptools.package-data]
release_gate = ["*.yaml", "*.json"]

[tool.vercel]
entrypoint = "release_gate_api.main:app"

